--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
+@keyframes ease-in {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .App {
   text-align: center;
 }
 
+.App-logo-container {
+  text-align: center;
+  padding-bottom: 50px;
+  padding-top: 150px;
+  animation: ease-in 0.6s ease-in; /* Apply easing animation */
+}
+
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 50%;
+  height: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-title {
+  padding-bottom: 5px;
+  text-align: center;
+  animation: ease-in 0.6s ease-in; /* Apply easing animation */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Event-title {
+  padding-bottom: 25px;
+  text-align: center;
+  animation: ease-in 0.6s ease-in; /* Apply easing animation */
+}
+
+.Home-main {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  animation: ease-in 0.6s ease-in; /* Apply easing animation */
+}
+
+/* Common styles for the event section */
+.Event-section {
+  display: flex;
+  flex-direction: column; /* Default to column layout for mobile screens */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 40px;
+  gap: 20px;
+  animation: ease-in 0.6s ease-in; /* Apply easing animation */
+}
+
+/* Flyer image styles */
+.Event-flyer {
+  max-width: 320px;
+  height: auto;
+  animation: ease-in 0.6s ease-in; /* Apply easing animation */
+}
+
+/* Event details container */
+.Event-details {
+  text-align: center;
+  animation: ease-in 0.6s ease-in; /* Apply easing animation */
+}
+
+/* Media query for larger screens */
+@media (min-width: 768px) {
+  .Event-section {
+    flex-direction: row; /* Arrange items horizontally on larger screens */
+    align-items: flex-start; /* Align items to the top */
+  }
+
+  .Event-details {
+    text-align: left; /* Align text to the left on larger screens */
+    max-width: 500px; /* Optional: set a max-width for the details */
+  }
+
+  .Event-flyer {
+    margin-right: 20px; /* Add spacing between the flyer and the details */
+  }
+}
+
+
+
+.custom-button {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Centers contents horizontally */
+  padding: 10px 20px;
+  font-size: 16px;
+  text-decoration: none;
+  background-color: #fff; /* Example background color */
+  color: black;
+  border: 1px solid #000; /* Border color for non-hover state */
+  border-radius: 8px; /* Slightly rounded corners */
+  gap: 10px; /* Space between icon and text */
+  margin-top: 20px; /* Space between button and text above it */
+  transition: background-color 0.3s, color 0.3s, border 0.3s; /* Smooth transition for color and border change */
+}
+
+.custom-button:hover {
+  background-color: #000; /* New background color on hover */
+  color: #fff; /* New text color on hover */
+  border: 1px solid #fff; /* White border on hover */
+}
+
+.button-icon {
+  font-size: 18pt;
+  padding-right: 15px;
+  text-align: center;
+}
+
+body {
   color: white;
+  background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pageText {
+  color: white;
+  text-align: center;
+  justify-content: center;
+  margin: 15px;
 }
