--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 
 .App {
   text-align: center;
+  background-color: black;
 }
 
 .App-logo-container {
@@ -29,6 +30,19 @@
   padding-bottom: 5px;
   text-align: center;
   animation: ease-in 0.6s ease-in; /* Apply easing animation */
+}
+
+.loader-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full viewport height */
+  width: 100vw; /* Full viewport width */
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #000; /* Optional: if you want a background color */
 }
 
 .Event-title {
@@ -118,7 +132,7 @@
 
 body {
   color: white;
-  background-color: black;
+  
 }
 
 .pageText {
