--- a/src/components/Artists.css
+++ b/src/components/Artists.css
@@ -1,4 +1,16 @@
 /* src/components/ArtistsList.css */
+.artistTitle {
+  color: white;
+  padding-top: 125px;
+  padding-bottom: 15px;
+  text-align: center;
+  
+}
+
+p {
+  text-align: center;
+  padding-bottom: 25px;
+}
 
 .artists-list {
   display: grid;
