--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,22 @@
   text-align: center;
 }
 
+.page-title h1 {
+  color: #ffffff;
+  padding-top: 100px;
+  font-size: 36px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.page-title p {
+  color: #ffffff;
+  padding-top: 100px;
+  font-size: 36px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 body {
   color: white;
   
@@ -141,3 +157,4 @@ body {
   justify-content: center;
   margin: 15px;
 }
+
