added overlay blur when using mobile menu

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -125,14 +125,17 @@ a {
     width: 100%;
     height: calc(100% - 8vh); /* Cover the rest of the page */
     background: rgba(0, 0, 0, 0); /* Start with no opacity */
-    transition: background 0.5s ease-in-out;
+    backdrop-filter: blur(0px);
+    transition: background 0.8s ease-in-out;
     pointer-events: none; /* Prevent clicking through the overlay */
     z-index: 5; /* Ensure it's below the navbar */
   }
   
   .overlay-active {
-    background: rgba(0, 0, 0, 0.85); /* Semi-transparent black */
+    background: rgba(0, 0, 0, 0.65); /* Semi-transparent black */
+    backdrop-filter: blur(10px);
     pointer-events: auto; /* Allow interaction with the overlay */
+    transition: 0.5s ease-in;
   }
 }
 
